--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
   background-color: #ff4c68;
   color: #ffffff;
   width: 100%;
+  padding-bottom: 10%;
 }
 .container-fluid {
   padding: 3% 10% 3% 10%; /*3% on top and bottom 15% on right and left*/
@@ -24,24 +25,31 @@ body {
   font-family: "Montserrat-light";
 }
 .row {
-  margin-left: 2.5rem;
+  margin: 2.5rem;
   padding: 4.5rem;
 }
 .img-tag {
   transform: rotate(20deg);
+  position: absolute;
 }
+#features{
+  position: relative;
+  z-index: 1;
+  background-color: #ffffff;
+}
+
 .download-button{
     margin-top: 5%;
     margin-right: 4%;
-    
 }
 
 h1 {
   font-family: "Montserrat";
   font-family: "Ubuntu";
-  font-size: 4rem;
+  font-size: 2.5rem;
   font-weight: 900;
   line-height: 1.5;
+  margin: auto;
 }
 /* second-row */
 .icon-image{
@@ -55,11 +63,79 @@ h3{
     font-weight: 900;
     font-family: "ubuntu";
     text-align: center;
+    font-size: 1.5rem;
+}
+h2{
+  font-family: "ubuntu";
+  font-weight: 900;
+  font-size: 3rem;
+  line-height: 1.5;
+  text-align: center;
+  
 }
 p{
     text-align: center;
+    color: #8f8f8f;
 }
-.card{
+.feature-card{
     margin: 5% 5% 5% 5%;
     border: none;
+}
+
+/* Testimonials */
+
+#testimonials{
+  text-align: center;
+  background-color: #F94C66;
+  color: #ffffff;
+
+}
+.carousel-item{
+  padding: 7% 20%;
+}
+.testimonial-image{
+  width: 10%;
+  border-radius: 50%;
+  margin: 5% 5% 5% 5%;
+}
+#press{
+  background-color: #F94C66;
+  padding-bottom: 3%;
+  text-align: center;
+}
+.press-icon{
+  width: 15%;
+  margin: 1.25rem 1.25rem 3.125rem;
+}
+
+/* pricing section */
+
+.card{
+  /* margin: 1.25rem; */
+  height: 100%;
+}
+.price-button{
+  width: 100%;
+}
+#pricing{
+  padding: 3rem;
+}
+.pricing-column{
+  padding: 3% 2%;
+}
+.free-other-button{
+  margin-top: 2.5rem;
+}
+@media (max-width: 1100px){
+  .img-tag{
+    position: static;
+    transform: rotate(0);
+    align-items: center;
+    padding-right: 1.25rem;
+    padding-top: 1.25rem;
+    margin: auto;
+  }
+  #title{
+    text-align: center;
+  }
 }
