--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 body {
   font-family: "Montserrat";
+  padding-right: 0%;
+  margin-right: 0%;
+  
 }
 
 #title {
@@ -9,7 +12,8 @@ body {
   padding-bottom: 10%;
 }
 .container-fluid {
-  padding: 3% 10% 3% 10%; /*3% on top and bottom 15% on right and left*/
+  padding: 3% 10%;
+   /* 3% on top and bottom 15% on right and left */
 }
 .navbar-brand {
   font-family: "Montserrat";
@@ -49,7 +53,7 @@ h1 {
   font-size: 2.5rem;
   font-weight: 900;
   line-height: 1.5;
-  margin: auto;
+  /* margin: auto; */
 }
 /* second-row */
 .icon-image{
@@ -126,6 +130,37 @@ p{
 .free-other-button{
   margin-top: 2.5rem;
 }
+
+/* next section */
+
+#cta{
+  background-color: #F94C66;
+  padding: 3.5rem;
+}
+.btn-div{
+  margin-top: 1%;
+  margin-left: 38%;
+  align-items: center;
+}
+.final-para{
+  font-weight: 900;
+    font-family: "ubuntu";
+    text-align: center;
+    font-size: 2.5rem;
+    color: #ffffff;
+}
+.bottom-button{
+  margin: 1% 0% 0% 0%;
+}
+/* footer */
+
+.socialmedia-div{
+  text-align: center;
+}
+.socialmedia-icon{
+  margin: 1% 1%;
+}
+
 @media (max-width: 1100px){
   .img-tag{
     position: static;
@@ -135,7 +170,33 @@ p{
     padding-top: 1.25rem;
     margin: auto;
   }
+  h1{
+    text-align: center;
+  }
   #title{
     text-align: center;
   }
+}
+@media(max-width: 920px){
+  .btn-div{
+    margin-top: 1%;
+    margin-left: 29%;
+    align-items: center;
+  }
+}
+@media(max-width: 600px){
+  .img-tag{
+    margin: 5% 0%;
+    padding: 0px;
+    align-items: center;
+  }
+  #title{
+    text-align: center;
+  }
+  .container-fluid {
+    padding: 0% 0%;
+}
+.navbar-brand{
+  margin-left: 25%;
+}
 }
