--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,43 @@
 body {
   font-family: "Montserrat";
-  padding-right: 0%;
-  margin-right: 0%;
-  
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Ubuntu";
+  font-weight: 900;
+  line-height: 1.5;
+  text-align: center;
+}
+p {
+  text-align: center;
+  color: #8f8f8f;
+}
+.big-heading {
+  font-size: 2.5rem;
+  text-align: left;
+}
+.feature-heading {
+  font-size: 1.5rem;
+}
+.testimonial-heading {
+  font-size: 3rem;
 }
 
 #title {
   background-color: #ff4c68;
   color: #ffffff;
   width: 100%;
-  padding-bottom: 10%;
+  padding-bottom: 5%;
 }
 .container-fluid {
   padding: 3% 10%;
-   /* 3% on top and bottom 15% on right and left */
+  /* 3% on top and bottom 15% on right and left */
 }
 .navbar-brand {
-  font-family: "Montserrat";
   font-family: "Ubuntu";
   font-size: 2.5rem;
   font-weight: bold;
@@ -36,133 +57,107 @@ body {
   transform: rotate(20deg);
   position: absolute;
 }
-#features{
+#features {
   position: relative;
   z-index: 1;
   background-color: #ffffff;
 }
 
-.download-button{
-    margin-top: 5%;
-    margin-right: 4%;
+.download-button {
+  margin-top: 5%;
+  margin-right: 4%;
 }
 
-h1 {
-  font-family: "Montserrat";
-  font-family: "Ubuntu";
-  font-size: 2.5rem;
-  font-weight: 900;
-  line-height: 1.5;
-  /* margin: auto; */
-}
 /* second-row */
-.icon-image{
-    margin: auto;
-    color: #F94C66;
+.icon-image {
+  margin: auto;
+  color: #f94c66;
 }
-.icon-image:hover{
-    color: #d20f2c;
+.icon-image:hover {
+  color: #d20f2c;
 }
-h3{
-    font-weight: 900;
-    font-family: "ubuntu";
-    text-align: center;
-    font-size: 1.5rem;
-}
-h2{
-  font-family: "ubuntu";
-  font-weight: 900;
-  font-size: 3rem;
-  line-height: 1.5;
-  text-align: center;
-  
-}
-p{
-    text-align: center;
-    color: #8f8f8f;
-}
-.feature-card{
-    margin: 5% 5% 5% 5%;
-    border: none;
+
+.feature-card {
+  margin: 5% 5% 5% 5%;
+  border: none;
 }
 
 /* Testimonials */
 
-#testimonials{
+#testimonials {
   text-align: center;
-  background-color: #F94C66;
+  background-color: #f94c66;
   color: #ffffff;
-
 }
-.carousel-item{
+.carousel-item {
   padding: 7% 20%;
 }
-.testimonial-image{
+.testimonial-image {
   width: 10%;
   border-radius: 50%;
   margin: 5% 5% 5% 5%;
 }
-#press{
-  background-color: #F94C66;
+#press {
+  background-color: #f94c66;
   padding-bottom: 3%;
   text-align: center;
 }
-.press-icon{
+.press-icon {
   width: 15%;
   margin: 1.25rem 1.25rem 3.125rem;
 }
 
 /* pricing section */
 
-.card{
+.card {
   /* margin: 1.25rem; */
   height: 100%;
 }
-.price-button{
+.price-button {
   width: 100%;
 }
-#pricing{
+#pricing {
   padding: 3rem;
 }
-.pricing-column{
+.pricing-column {
   padding: 3% 2%;
 }
-.free-other-button{
+.free-other-button {
   margin-top: 2.5rem;
 }
 
 /* next section */
 
-#cta{
-  background-color: #F94C66;
+#cta {
+  background-color: #f94c66;
   padding: 3.5rem;
 }
-.btn-div{
+.btn-div {
   margin-top: 1%;
   margin-left: 38%;
   align-items: center;
 }
-.final-para{
+.final-para {
   font-weight: 900;
-    font-family: "ubuntu";
-    text-align: center;
-    font-size: 2.5rem;
-    color: #ffffff;
+  font-family: "ubuntu";
+  text-align: center;
+  font-size: 2.5rem;
+  color: #ffffff;
 }
-.bottom-button{
+.bottom-button {
   margin: 1% 0% 0% 0%;
 }
 /* footer */
 
-.socialmedia-div{
+.socialmedia-div {
   text-align: center;
 }
-.socialmedia-icon{
+.socialmedia-icon {
   margin: 1% 1%;
 }
 
-@media (max-width: 1100px){
-  .img-tag{
+@media (max-width: 1100px) {
+  .img-tag {
     position: static;
     transform: rotate(0);
     align-items: center;
@@ -170,33 +165,36 @@ p{
     padding-top: 1.25rem;
     margin: auto;
   }
-  h1{
+  h1 {
     text-align: center;
   }
-  #title{
+  .big-heading {
     text-align: center;
   }
 }
-@media(max-width: 920px){
-  .btn-div{
+@media (max-width: 920px) {
+  .btn-div {
     margin-top: 1%;
     margin-left: 29%;
     align-items: center;
   }
 }
-@media(max-width: 600px){
-  .img-tag{
+@media (max-width: 600px) {
+  .img-tag {
     margin: 5% 0%;
     padding: 0px;
-    align-items: center;
+    align-items: left;
   }
-  #title{
+  .big-heading {
     text-align: center;
   }
   .container-fluid {
     padding: 0% 0%;
-}
-.navbar-brand{
-  margin-left: 25%;
-}
+  }
+  .navbar-brand {
+    margin-left: 35%;
+  }
+  .download-button {
+    margin-left: 16%;
+  }
 }
